--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=no-reply@ecocare.id
-MAIL_PASSWORD=aDm1Np455w0RD@ecoCareID
+MAIL_PASSWORD=ubmperoauonoslsb
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=no-reply@ecocare.id
 MAIL_FROM_NAME="${APP_NAME}"
